<resources>
    <string name="app_name">SoulLinkHelper</string>
    <string name="name_player_1">Name Player 1</string>
    <string name="name_player_2">Name Player 2</string>
    <string name="new_game">New Game</string>
    <string name="start_game">Start Game</string>
    <string name="add_game">Add Game</string>
    <string name="game_name">Game Name</string>
    <string name="description_sprite_p1">Sprite of player one</string>
    <string name="description_sprite_p2">Sprite of player two</string>
    <string name="no_links_found">No links found!</string>
    <string name="game_id"></string>

    <string name="details_copy_id">Copy Game ID</string>
</resources>
