<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGame">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/new_game_screen_layout" />

    <Spinner
        android:id="@+id/regionSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:entries="@array/regions"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/gameNameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/namePlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/name_player_1"
        android:inputType="textShortMessage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/regionSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.74" />

    <EditText
        android:id="@+id/namePlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:hint="@string/name_player_2"
        android:inputType="textShortMessage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/regionSpinner"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="makeGame"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/characterSpritePlayerOne"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toEndOf="@+id/characterSpritePlayerTwo"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.641" />

    <ImageView
        android:id="@+id/characterSpritePlayerOne"
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/description_sprite_p1"
        android:onClick="switchSprite"
        android:tag="characterSpritePlayerOne"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/namePlayerTwo"
        app:layout_constraintTop_toBottomOf="@+id/namePlayerTwo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/trainer_sprite_1" />

    <ImageView
        android:id="@+id/characterSpritePlayerTwo"
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/description_sprite_p2"
        android:onClick="switchSprite"
        android:tag="characterSpritePlayerTwo"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="@+id/namePlayerOne"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/namePlayerOne"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/trainer_sprite_2" />

    <EditText
        android:id="@+id/gameNameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/game_name"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.335" />

</androidx.constraintlayout.widget.ConstraintLayout>